@@ -12,6 +12,7 @@
 * Module zip files are now downloaded to the configurable temp directory when upgrading
 * Remove userEvents table which would allow a user to silence an event for yourself in the legacy UI
 * Fix bug in MySQL database create script which would create the name column 40 characters long instead of 255
+* Add ability to create new event detectors for a data point by importing them without an xid
 
 *Version 3.7.4*
 * Improve work item failure logging
